--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -12,7 +12,7 @@
 					</div>
 					<div class="details">
 						<div class="title"><a href="{% url documento documento.pk %}">{{ documento.titulo }}</a></div>
-						{% if documento.autor %}{{ documento.autor }}{% endif %}
+						{% if documento.autor %}{{ documento.autor }}<br/>{% endif %}
 						{% if documento.materia.all %}{% for materia in documento.materia.all %} {{ materia  }}{% if not forloop.last %}; {% endif %}{% endfor %}{% endif %}
 					</div> 
 					<div class="clear"></div>
