--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -461,7 +461,7 @@ input[type=submit] {
 
 #main .comentario .buttons_container 
 {
-	padding: 0 10px 0 0;
+	padding: 10px 10px 0 0;
 	}
 
 #main .comentario .contenido {
