--- a/alephuba/templates/acerca.html
+++ b/alephuba/templates/acerca.html
@@ -12,7 +12,7 @@ que nos interesan.</p>
 <p><b>No alojamos en nuestros servidores ninguno de los contenidos accesibles desde el sitio</b>, sólo proveemos una forma
 de organizar los archivos subidos por los usuarios, y no nos responsabilizamos por lo que ellos publiquen. 
 Si sos autor o posees los derechos de cualquier material publicado en el sitio y querés que sea retirado, 
-por favor <a href="mailto:info@be-it.com.ar">ponete en contacto con nosotros.</a></p>
+por favor <a href="mailto:alephuba@gmail.com">ponete en contacto con nosotros.</a></p>
 
 <p><b>aleph uba</b> está desarrollado con el lenguaje de programación <a href="http://python.org/">Python</a> 
 y el framework web <a href="https://www.djangoproject.com/">django</a>. 
@@ -24,7 +24,7 @@ Los íconos de archivo son parte del <a href="http://www.famfamfam.com/">silk ic
 <h3>Como colaborar</h3>
 <p>Como usuario podés colaborar subiendo material, reportando los links caídos, erróneos, etc. 
 También podés comentarnos acerca de errores que encuentres, o mejoras que pensas serían útiles para el sitio.
-Podés hacerlo <a href="mailto:info@be-it.com.ar">mandándonos un mail.</a></p>
+Podés hacerlo <a href="mailto:alephuba@gmail.com">mandándonos un mail.</a></p>
 
 <p>Si sos programador o diseñador web podes colaborar mejorando el código, arreglando bugs o implementando nueva funcionalidad.
 El proyecto está disponible en <a href="https://github.com/facundoolano/alephuba">GitHub</a>, si querés colaborar hacé un fork y un pull request.</p>
