--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -244,7 +244,7 @@ thead{ background: #FFFFFF;}
 	margin-left: 10px;
 }
 
-#main #archivos_table .icon-td {
+#main #archivos_table td {
 	vertical-align: middle;
 	}
 
