--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>{% block section_title%}Documentos recientes{% endblock %}</h2>
+
+{% if request.GET.qs_documento %} 
+<h2>Búsqueda rápida</h2>
+<h3>"{{ request.GET.qs_documento }}"</h3>
+{% else %}
+<h2>Documentos recientes</h2>
+{% endif %}
+
 
 {% block filter_form %}{% endblock %}
 
