--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -84,7 +84,7 @@
 			<tr {% cycle 'class="odd"' '' %}>
 				<td><a href="{{ archivo.link  }}" target="_blank">{{ archivo.link  }}</a></td>
 				<td class="icon-td"><img src="{{ archivo|file_icon }}" title="{{archivo.extension|default:''}}"/></td>
-				<td>{{ archivo.tamanio|filesizeformat }}</td>
+				<td>{% if archivo.tamanio %}{{ archivo.tamanio|filesizeformat }}{% endif %}</td>
 				<td>{{ archivo.subido_por }}</td>
 				<td class="actions icon-td"><a href="{% url reportar archivo.pk %}"><img src="{{ MEDIA_URL }}img/icons/exclamation.png" title="Reportar archivo"/></a></td>
 			</tr>
