--- a/alephuba/templates/documentos/busqueda_materia.html
+++ b/alephuba/templates/documentos/busqueda_materia.html
@@ -1,6 +1,6 @@
 {% extends 'documentos/documento_list.html' %}
 
-{% block section_title%}Búsqueda por materia{% endblock %}
+{% block section_title%}<h2>Búsqueda por materia</h2>{% endblock %}
 
 {% block filter_form %}
 <div id="filter_form">
