--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-{% if request.GET.qs_documento %} 
-<h2>Búsqueda rápida</h2>
-<h3>"{{ request.GET.qs_documento }}"</h3>
-{% else %}
-<h2>Documentos recientes</h2>
-{% endif %}
+{% block section_title%}
+	{% if request.GET.qs_documento %} 
+	<h2>Búsqueda rápida</h2>
+	<h3>"{{ request.GET.qs_documento }}"</h3>
+	{% else %}
+	<h2>Documentos recientes</h2>
+	{% endif %}
+{% endblock %}
 
 
 {% block filter_form %}{% endblock %}
