--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -57,8 +57,8 @@
 					{% if lista_materias %}<p><label>Materia{{lista_materias|pluralize}}:</label> {% for materia in lista_materias %} {{ materia  }}{% if not forloop.last %}; {% endif %}{% endfor %}</p>{% endif %}
 				{% endwith %}
 
-				{% with lista_documentos=documento.carrera.all %}
-					{% if lista_documentos %}<p><label>Carrera{{lista_documentos|pluralize}}:</label> {% for carrera in lista_documentos %} {{ carrera }}{% if not forloop.last %}; {% endif %}{% endfor %}</p>{% endif %}
+				{% with lista_carreras=documento.carrera.all %}
+					{% if lista_carreras %}<p><label>Carrera{{lista_carreras|pluralize}}:</label> {% for carrera in lista_carreras %} {{ carrera }}{% if not forloop.last %}; {% endif %}{% endfor %}</p>{% endif %}
 				{% endwith %}
 
 				<p><label>Tipo de documento:</label> {{ documento.get_tipo_display }}</p>
