--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -103,11 +103,10 @@
 </table>
 
 
-{% get_comment_count for documento as number_of_comments %}
+{% get_comment_list for documento as comment_list %}
 
 <div id="comentarios">
-	<h3>Comentarios ({{number_of_comments}})</h3>
-	{% get_comment_list for documento as comment_list %}
+	<h3>Comentarios ({{comment_list|length}})</h3>
 		
 	<div id="send_comentario" class="comentario">
 			<div class="header">
