--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Aleph UBA</title>
 
-<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
 <!-- CSS -->
 <link href="{{ MEDIA_URL }}css/reset.css" rel="stylesheet" type="text/css" media="screen" />
