--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -13,9 +13,7 @@
 					<div class="details">
 						<div class="title"><a href="{% url documento documento.pk %}">{{ documento.titulo }}</a></div>
 						{% if documento.autor %}{{ documento.autor }}<br/>{% endif %}
-						{% with lista_materias=documento.materia.all %}
-							{% if lista_materias %}{% for materia in lista_materias %} {{ materia }}{% if not forloop.last %}; {% endif %}{% endfor %}{% endif %}
-						{% endwith %}
+						{% lista_materias documento %}
 					</div> 
 					<div class="clear"></div>
 					
