--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -8,7 +8,7 @@
 	
 	<script type="text/javascript">
 		function on_cover_error(source) {
-			$(source).unbind("error").attr("src", "{{ MEDIA_URL }}img/Blank.jpg");
+			$(source).unbind("error").attr("src", "{{ MEDIA_URL }}img/tipos_documentos/blank.jpg");
 		}
 	</script>
 	
