--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
 	
 	function on_cover_error(source) {
-		$(source).unbind("error").attr("src", "{{ MEDIA_URL }}img/tipos_documentos/blank.jpg");
+		$(source).unbind("error").attr("src", "{{ MEDIA_URL }}img/tipos_documentos/libro.png");
 	}
 
 	function get_pagina(page) {
