cambio en acerca de alephuba

--- a/alephuba/templates/acerca.html
+++ b/alephuba/templates/acerca.html
@@ -19,7 +19,8 @@ y el framework web <a href="https://www.djangoproject.com/">django</a>.
 Para buscar la información de los libros y sus portadas usamos la <a href="http://openlibrary.org/developers/api">API</a> de <a href="http://openlibrary.org">Open Library</a>.
 Los íconos de archivo son parte del <a href="http://www.famfamfam.com/">silk icon set.</a></p>
 
-
+<p>Agredecemos a los responsables del <a href="http://apuntes.foros-fiuba.com.ar">sistema de apuntes de FIUBA</a> 
+por dejarnos subir sus apuntes, y de <a href="http://www.fiubar.com.ar">FIUBAR</a> por pasarnos los datos de los planes de estudio. </p>
 
 <h3>Como colaborar</h3>
 <p>Como usuario podés colaborar subiendo material, reportando los links caídos, erróneos, etc. 
