secret key removed

--- a/alephuba/templates/login.html
+++ b/alephuba/templates/login.html
@@ -19,7 +19,7 @@
 	{% endwith %}
 		
 	<div class="text">
-		<p><a href="{% url registracion %}">¿No estas registrado?</a></p>
+		<p><a href="{% url registracion %}">¿No estás registrado?</a></p>
 	</div>
 {% endif%}
 
