--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         
-        <p id="footer">© 2012 be it. {% if user.is_authenticated %}<a href="{% url acerca %}">Acerca de alephuba</a> | <a href="mailto:info@be-it.com.ar">Contacto</a>{% endif %}</p>
+        <p id="footer">© 2012 be it. {% if user.is_authenticated %}<a href="{% url acerca %}">Acerca de alephuba</a> | <a href="{% url contacto %}">Contacto</a>{% endif %}</p>
     </div>
 </body>
 </html>
