--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -310,7 +310,9 @@ thead{ background: #FFFFFF;}
 
 #logo{
 	float:left;
-	}
+	margin-top: 5px;
+	margin-bottom: 2px;
+}
 
 #user_menu{
 	margin-right: 15px;
@@ -319,9 +321,7 @@ thead{ background: #FFFFFF;}
 	padding-top: 34px;
 	font-size: 14px;
 	font: status-bar;
-	
-	}
-
+}
 
 /* -------------
 * Noticias
