--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -196,7 +196,6 @@ h2 {
 	font-weight: normal;
 }
 
-
 #main fieldset input[type=password],
 #main fieldset input[type=text]  {
 	border: 1px solid #ddd;
@@ -208,7 +207,6 @@ h2 {
 	float: left;
 	margin: 0 10px 0 0;
 }
-
 
 #main fieldset input[type=text]:focus, 
 #main fieldset input[type=password]:focus,
@@ -227,11 +225,9 @@ h2 {
 	overflow: hidden;
 }
 
-
-
 #main .text p{
 	line-height: 1.2;
-	}
+}
 	
 #main a { text-decoration: none; color:#646464;}
 
@@ -245,7 +241,7 @@ thead{ background: #FFFFFF;}
 
 #main #archivos_table td {
 	vertical-align: middle;
-	}
+}
 
 #main th {
 	vertical-align: top;
@@ -269,7 +265,7 @@ thead{ background: #FFFFFF;}
 #footer a { 
 	color: #9B9B9B;
 	text-decoration: none; 
-	}
+}
 	
 #footer a:hover { text-decoration: underline; }
 
@@ -278,7 +274,7 @@ thead{ background: #FFFFFF;}
 
 #main fieldset .field_container {
 	margin-top: 10px;
-	 }
+}
 
 .error {
 	font-weight: bold;
@@ -301,12 +297,11 @@ thead{ background: #FFFFFF;}
 	margin: 0 10px 0 0;
 }
 
-#main select[multiple=multiple]
-{
+#main select[multiple=multiple] {
 	height : 150px;
 	font-size: 13px;
 	max-width: 480px;
-	}
+}
 
 #logo{
 	float:left;
@@ -333,22 +328,20 @@ thead{ background: #FFFFFF;}
 	font-weight: bold;
 	color: #5494af;
 	margin: 30px 0 5px;
-	}
-#main .noticia .contenido p{
+}
+
+#main .noticia .contenido p {
 	font-size: 13px;
-	}
+}
 
 .noticia .detalle {
 	color : #b1b1b1;
 	margin: 5px 0;
-	}
-
-
+}
 
 #home_footer .next {
 	float: right;
-	}
-
+}
 
 /* -------------
 * Buttons
@@ -406,25 +399,26 @@ border: 1px solid #ddd;
 
 #documento_form h3 {
 	margin: 0px 0 15px;
-	}
+}
+
 #documento_form fieldset {
 	border: 0;
 	background: #FFFFFF;
 	margin: 0 0 0px;
 	padding: 20px 20px 5px;
-	}
+}
 
 
 .buttons_container {
 	padding: 10px 0px 10px;
 	float:right;
-	}
+}
 
 input[type=reset],
 input[type=submit] {
 	width: 90px;
 	border-radius: 4px 4px 4px 4px;
-	}
+}
 
 #comentarios {
 	padding-top: 15px;
@@ -442,25 +436,25 @@ input[type=submit] {
 #send_comentario {
 	margin-bottom: 15px;
 	color: #646464;
-	}
+}
 
 .comentario .header {
 	border-bottom: 1px solid #DDDDDD;
 	font-size: 12px;
 	margin-bottom: 5px;
-	}
+}
 
 .comentario .header .nombre {
 	float: left;
-	}
+}
 
 .comentario .header .fecha {
 	float: right;
-	}
+}
 
 #main .comentario fieldset {
 	padding: 0 20px 0 5px;
-	}
+}
 
 #main .comentario .buttons_container 
 {
@@ -469,33 +463,33 @@ input[type=submit] {
 
 #main .comentario .contenido {
 	color: #000000;
-	}
+}
 
 #main .comentario textarea {
 	width: 100%;
 	height: 50px;
-	}
+}
 
 #main .display-fieldset {
 	border: 1px solid #ddd;
 	padding: 19px;
 	margin: 0 0 20px 0;
 	background: #fbfbfb;
-	}
+}
 	
 #main p {
 	padding-bottom: 10px;
 	line-height: 1.4em;
 	font-size: 14px;
-	}
+}
 
 #main a{
 	color: #2f3dc9;
-	}
+}
 
 tr .actions {
 	text-align: right;
-	}
+}
 
 #filter_form {
 	padding-bottom: 10px;
@@ -503,38 +497,39 @@ tr .actions {
 
 
 #filtro_buscar {
-	width: 18%;
-	float:left;
-	}
+	position: relative;
+	width: 17%;
+	float: left;
+}
 
 #filtro_depto {
+	position: relative;
 	float: left;
-	width :32%;
-	}
+	width: auto;
+}
 
 #filtro_materias, #filtro_carreras {
-	float:left;
-	width :50%;
-	}
+	position: relative;
+	float: left;
+	width: auto;
+}
 
 li {
 	text-align: left;
-	}
+}
 	
 #documento_form .help_text{
 	font-size: 12px;
-	}
+}
 
 #subidas {
 	float:left;
 	width: 60%;
-	}
+}
 	
 #usuarios_activos {
 	float:left;
 	padding-left: 15px;
 	text-align: left;
 	width:auto;
-	}
-	
-
+}
