Agrego estrellas de votos al listado de documentos, cierro el issue #49.

--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -533,3 +533,13 @@ li {
 	text-align: left;
 	width:auto;
 }
+
+.left {
+	float : left;
+	position : relative;
+}
+
+.right {
+	float : right;
+	position : relative;
+}
