--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -17,7 +17,7 @@
 							{% lista_materias documento %}
 						</div>
 						<div class="right">
-							<div class="puntaje">{{ puntaje }}</div>
+							<div class="puntaje" data-rating="{{ puntaje }}"></div>
 						</div>
 					</div> 
 					<div class="clear"></div>
